# GPU_HYPE

./: .gitignore  AGENTS.md  CLAUDE.md  DisplayPKL.py  README.md  Trainer.py  crowding.py  data.py  domination.py  environment.yml  functions.py  functions2.py  gpu.py  gpu_pso.py  new_error_model.py  openCL.py  pyproject.toml  test.py
.github/: copilot-instructions.md
Pickles/: input.pkl  output.pkl
conceptual/: HYPE.py
demo_model/HYPE_setup_folder/: GeoData.txt  info.txt  par.txt
error/: errorNumpy.py  errorOpenCL.py  error_model.py  evalMAE.cl
examples/: BestAutomaticCalibration_0050675.txt  Qobs.txt
examples/set7_germany_tuerkheim/: AtmdepData_.txt  CropData.txt  GeoClass.txt  GeoData.txt  MgmtData.txt  Pobs.txt  PointSourceData.txt  TMAXobs.txt  TMINobs.txt  Tobs.txt  info.txt  par.txt
gpu_model/: functions2.py  gpu.py  gpu_pso.py
notebook_results/: my_calibration.pkl  predictions.csv
notebooks/: 00_setup_and_data.ipynb  01_calibration.ipynb  01_calibration_and_prediction.ipynb  02_training_and_predicting.ipynb  03_results.ipynb
regression/: annLeakyRelu.cl  annOpenCL.py
tests/: conftest.py  test_smoke.py
